infra/k8s/assignment-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment-api
  namespace: ab-calicritters
  labels:
    app: assignment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assignment-api
  template:
    metadata:
      labels:
        app: assignment-api
    spec:
      containers:
        - name: assignment-api
          image: ab-calicritters/assignment-api:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
